--- a/src/app/ieo/ieo.component.html
+++ b/src/app/ieo/ieo.component.html
@@ -28,9 +28,9 @@
     [community]="ieoData.community"
   >
   </app-ieo-community>
-  <ng-container *ngIf="!isProd">
+  <!-- <ng-container *ngIf="!isProd">
     <button (click)="testNotif()">notification test</button>
-  </ng-container>
+  </ng-container> -->
 
   <app-ieo-requirements
     [isAuthenticated]="isAuthenticated"
