--- a/src/app/dashboard/components/embedded-orders-mobile/embedded-open-orders-mobile/embedded-open-orders-mobile.component.html
+++ b/src/app/dashboard/components/embedded-orders-mobile/embedded-open-orders-mobile/embedded-open-orders-mobile.component.html
@@ -68,7 +68,7 @@
       <span>{{item.amountConvert}}</span>
     </td>
     <td class="table__cell table__cell--arr-mob">
-      <img class="" src="../../assets/img/arr-toggler-down-blue.svg">
+      <img [ngClass]="{'img-rotate': selectedOrder && selectedOrder.id === item.id}" src="../../assets/img/arr-toggler-down-blue.svg">
     </td>
   </tr>
   <tr class="table__details" *ngIf="selectedOrder && selectedOrder.id === item.id">
