--- a/src/app/popups/popups.component.html
+++ b/src/app/popups/popups.component.html
@@ -1,4 +1,6 @@
 
+<app-notifications-list></app-notifications-list>
+
 <div *ngIf="popupService.getLoginMobilePopupListener() | async">
   <app-login-popup-mobile></app-login-popup-mobile>
 </div>
