--- a/src/app/settings/api-keys/api-keys.component.html
+++ b/src/app/settings/api-keys/api-keys.component.html
@@ -25,33 +25,33 @@
 </form>
 
 <div class="api-key-container">
-  <div class="api-text">
+  <div class="api-text" *ngIf="!(apiKeys$ | async).length">
     <p>Tou haven’t create API-keys yet. Enter API-key name and press “Create API-key” to  produce</p>
   </div>
-  <div class="api-key-item" *ngFor="let item of [1,2,3,4]">
-    <div class="key-name">API-key name</div>
-    <div class="api-key">LKLDKSJLJD98845JGLDFLKG949539KFDLG</div>
+  <div class="api-key-item" *ngFor="let key of apiKeys$ | async; let index=index">
+    <div class="key-name">{{key.alias}}</div>
+    <div class="api-key">{{key.publicKey}}</div>
     <div class="key-controls">
       <div class="api-key-checkbox">
         <div class="input-wr">
-          <input class="hidden-content" id="allowed1" type="checkbox" [checked]="item === 3 ? check : notCheck" (change)="onChangeTrading($event)">
-          <label for="allowed1">
+          <input class="hidden-content" [id]="'allowed'+index" type="checkbox" [checked]="key.allowTrade" (change)="onChangeTrading($event, key)">
+          <label [for]="'allowed'+index">
             <svg width="10" height="9" viewBox="0 0 10 9" fill="none" xmlns="http://www.w3.org/2000/svg">
               <rect x="0.618652" y="4.51746" width="1.64933" height="4.948" rx="0.824666" transform="rotate(-45 0.618652 4.51746)" fill="#2560F2"/>
               <rect x="8.83374" y="0.967583" width="1.64933" height="8.31887" rx="0.824666" transform="rotate(45 8.83374 0.967583)" fill="#2560F2"/>
             </svg>
           </label>
         </div>
-        <label for="allowed1" class="allowed-text">Trading allowed</label>
+        <label [for]="'allowed'+index" class="allowed-text">Trading allowed</label>
       </div>
       <div class="api-key-delete-btn">
-        <button class="btn btn--small btn--empty-blue " (click)="confirmDelete(item)">
+        <button class="btn btn--small btn--empty-blue " (click)="confirmDelete(key.id)">
           {{'delete' | translate}}
         </button>
-        <div class="revoke-request" *ngIf="confirmDeleteKeyId === item">
+        <div class="revoke-request" *ngIf="confirmDeleteKeyId === key.id">
           <div class="revoke-request__title">{{'Are you sure you want to delete this key?' | translate}}</div>
           <div class="revoke-request__button-wrap">
-            <button class="btn btn--small" (click)="deleteApiKey(item)">{{'Yes' | translate}}</button>
+            <button class="btn btn--small" (click)="deleteApiKey(key.id)">{{'Yes' | translate}}</button>
             <button class="btn btn--small" (click)="cleanConfirmDeleteKeyId()">{{'No' | translate}}</button>
           </div>
           <div class="revoke-request__triangle"></div>
@@ -65,6 +65,7 @@
 
 <app-api-key-created
 [showPopup]="showKeyCreatedPopup"
+[newKey]="newKey"
 (closeCreatedKeyPopup)="toggleKeyCreatedPopup(false)">
 </app-api-key-created>
 
@@ -72,7 +73,8 @@
 [isPinFomGA]="GAEnabled$ | async"
 [apiKeyName]="newKeyName"
 [twoFAFor]="twoFAFor"
-[keyIdForEnableTrading]=""
+[keyIdForEnableTrading]="keyIdForEnableTrading"
 *ngIf="show2FAPopup"
+(createdNewKey)="close2FAPopup()"
 (close2FAPopup)="close2FAPopup()">
 </app-api-key-popup>
