--- a/src/app/funds/transaction-history/transaction-history.component.html
+++ b/src/app/funds/transaction-history/transaction-history.component.html
@@ -295,10 +295,30 @@
             <span>{{item.amount | roundCurrency: item.currencyName | formatCurrency}}</span>
           </td>
           <td class="table__cell">
-            <span class="txt-green" *ngIf="item.sourceType === 'REFILL'">{{item.sourceType | showTransactionsType}}</span>
-            <span class="txt-red" *ngIf="item.sourceType === 'WITHDRAW'">{{item.sourceType | showTransactionsType}}</span>
-            <span class="txt-green" *ngIf="item.sourceType === 'USER_TRANSFER' && item.accepted">{{item.sourceType | showTransactionsType: item}}</span>
-            <span class="txt-red" *ngIf="item.sourceType === 'USER_TRANSFER' && !item.accepted">{{item.sourceType | showTransactionsType: item}}</span>
+            <span
+              class="txt-green"
+              *ngIf="item.sourceType === 'REFILL'"
+            >{{item.sourceType | showTransactionsType}}</span>
+            <span
+              class="txt-red"
+              *ngIf="item.sourceType === 'WITHDRAW'"
+            >{{item.sourceType | showTransactionsType}}</span>
+            <span
+              class="txt-green"
+              *ngIf="item.sourceType === 'USER_TRANSFER' && item.accepted"
+            >{{item.sourceType | showTransactionsType: item}}</span>
+            <span
+              class="txt-red"
+              *ngIf="item.sourceType === 'USER_TRANSFER' && !item.accepted"
+            >{{item.sourceType | showTransactionsType: item}}</span>
+            <span
+              class="txt-green"
+              *ngIf="item.sourceType === 'IEO' && item.operationType === 'Input'"
+            >{{item.sourceType | showTransactionsType}}</span>
+            <span
+              class="txt-red"
+              *ngIf="item.sourceType === 'IEO' && item.operationType === 'Output'"
+            >{{item.sourceType | showTransactionsType}}</span>
           </td>
           <td class="table__cell">
             <span>{{item.transactionHash}}</span>
