fix date, add time zone

--- a/src/app/dashboard/components/embedded-orders/embedded-orders-history/embedded-orders-history.component.html
+++ b/src/app/dashboard/components/embedded-orders/embedded-orders-history/embedded-orders-history.component.html
@@ -61,8 +61,8 @@
     </td>
     <td class="table__cell">
       <div class="table__date-time">
-        <div>{{item.dateCreation | amDateFormat:"DD.MM.YYYY"}}</div>
-        <div>{{item.dateCreation | amDateFormat:"HH:mm:ss"}}</div>
+        <div>{{item.dateCreation | amFromUtc | amLocal | amDateFormat:"DD.MM.YYYY"}}</div>
+        <div>{{item.dateCreation | amFromUtc | amLocal | amDateFormat:"HH:mm:ss"}}</div>
       </div>
     </td>
     <td class="table__cell">
