--- a/src/app/settings/api-keys/api-keys.component.html
+++ b/src/app/settings/api-keys/api-keys.component.html
@@ -33,8 +33,8 @@
 </div>
 </form>
 
-<div style="height: 58px;">
-  <div *ngIf="loading$ | async">
+<div>
+  <div style="height: 58px;" *ngIf="loading$ | async">
     <app-loader size="small"></app-loader>
   </div>
 </div>
