--- a/src/app/settings/settings.component.scss
+++ b/src/app/settings/settings.component.scss
@@ -1,7 +1,7 @@
 .settings-content-wr{
 	width: 100%;
 	@media(max-width: 992px){
-		margin-top: auto;
+		// margin-top: auto;
 		margin-bottom: auto;
 	}
 }
