--- a/src/app/settings/api-keys/api-key-created/api-key-created.component.scss
+++ b/src/app/settings/api-keys/api-key-created/api-key-created.component.scss
@@ -17,11 +17,15 @@
     align-items: center;
     margin-bottom: 24px;
     position: relative;
+    @media(max-width: 1199px){
+      margin-bottom: 0;
+    }
   }
   &__select{
     width: 100%;
     max-width: unset;
     margin-bottom: 28px;
+    overflow: hidden;
   }
 
 }
@@ -30,7 +34,10 @@
   left: -12px;
   margin-top: 24px;
   @media(max-width: 1199px){
-    padding: 10px;
+    padding: 10px 14px;
+    width: 100%;
+    left: 0;
+    margin-top: 32px;
   }
 }
 @media (min-width:1200px){
@@ -128,6 +135,10 @@ color: #191A39;
   line-height: normal;
 
   color: #237BEF;
+  @media(max-width: 1199px){
+        background: #191A39;
+        color: #DEDEFB;
+  }
 }
 
 
@@ -164,6 +175,10 @@ color: #191A39;
   margin-left: auto;
   margin-right: auto;
   padding: 0 32px;
+  @media(max-width: 1199px){
+        padding: 0 12px;
+        padding-top: 20px;
+  }
 }
 .api-key-content{
   @media(max-width: 1199px){
