--- a/src/app/settings/verification/verification.component.html
+++ b/src/app/settings/verification/verification.component.html
@@ -81,10 +81,14 @@
               <!--Input error section starts-->
               <div *ngIf="form.get('firstName').errors != null && !openCountryDropdown && !openDocTypeDropdown">
                 <div class="input-hint-wrapper">
-             <span class="wrap-input__message wrap-input__message--show"
-                   *ngIf="form.get('firstName').errors['required'] && (form.get('firstName').touched )">
-               {{'First Name is required.' | translate}}
-             </span>
+                   <span class="wrap-input__message wrap-input__message--show"
+                        *ngIf="form.get('firstName').errors['required'] && (form.get('firstName').touched )">
+                        {{'First Name is required.' | translate}}
+                   </span>
+                  <span class="wrap-input__message wrap-input__message--show"
+                        *ngIf="form.get('firstName').errors['pattern'] && (form.get('firstName').touched )">
+                        {{'Only latin characters(a-z) are allowed.' | translate}}
+                  </span>
                 </div>
               </div>
               <!--Input error section ends-->
@@ -97,10 +101,14 @@
               <!--Input error section starts-->
               <div *ngIf="form.get('lastName').errors != null && form.get('firstName').valid">
                 <div class="input-hint-wrapper">
-            <span class="wrap-input__message wrap-input__message--show"
-                  *ngIf="form.get('lastName').errors['required'] && (form.get('lastName').touched )">
-              {{'Last Name is required.' | translate}}
-            </span>
+                   <span class="wrap-input__message wrap-input__message--show"
+                       *ngIf="form.get('lastName').errors['required'] && (form.get('lastName').touched )">
+                       {{'Last Name is required.' | translate}}
+                   </span>
+                   <span class="wrap-input__message wrap-input__message--show"
+                        *ngIf="form.get('lastName').errors['pattern'] && (form.get('lastName').touched )">
+                        {{'Only latin characters(a-z) are allowed.' | translate}}
+                   </span>
                 </div>
               </div>
               <!--Input error section ends-->
